# FlaskBoardX

./: .env_template  README.md  pyproject.toml
src/flaskboardx/board/: __init__.py  database.py  errors.py  pages.py  posts.py
src/flaskboardx/board/static/: styles.css
src/flaskboardx/board/templates/: base.html
src/flaskboardx/board/templates/errors/: 404.html
src/flaskboardx/board/templates/posts/: posts.html
